<resources>
    <string name="app_name">AJUDAE</string>

    //Campos invalidos
    <string name="senha_curta">A senha deve conter ao menos 6 caracteres</string>
    <string name="nascimento_invalido">Data de nascimento inválida</string>
    <string name="cep_invalido">CEP inválido</string>
    <string name="email_invalido">Email inválido</string>
    <string name="nome_invalido">Nome inválido</string>

    //Toasts
    <string name="senhas_diferentes">A senha e a confirmação não coincidem</string>
    <string name="email_ja_cadastrado">Email já cadastrado</string>
    <string name="sem_genero">Selecione uma opção de gênero</string>
    <string name="cadastrou">Você foi cadastrado com sucesso</string>

    <string name="login_incorreto">Informações incorretas</string>

    //BottomNavigationBar
    <string name="feed">Feed</string>
    <string name="faltas">Faltas</string>
    <string name="buscar">Buscar</string>
    <string name="notificacoes">Notificações</string>
    <string name="perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_text_feed">PERGUNTAS</string>
    <string name="fragment_text_faltas">FALTAS</string>
    <string name="fragment_text_search">BUSCAR</string>
    <string name="fragment_text_notifications">NOTIFICAÇÕES</string>
    <string name="fragment_text_profile">PERFIL</string>
    <string name="title_activity_initial_screen">InitialScreenActivity</string>
    <string name="title_feed">Home</string>
    <string name="title_faltas">Dashboard</string>
    <string name="title_search">Notifications</string>
    <string name="title_profile">Perfil</string>
    <string name="title_notifications">Notificações</string>

    <string name="ola">Olá</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="voc_est_logado">Você está Logado!</string>
    <string name="turma_si_1">TURMA: SI 1</string>
    <string name="modelagem_de_programa_o_orientada_a_objetos">Modelagem de Programação Orientada a Objetos</string>
    <string name="continuar">CONTINUAR</string>
    <string name="senha_do_ava">Senha do AVA</string>
    <string name="conecte_se_com_o_ava_e_obtenha_suas_cadeiras_automaticamente">Conecte-se com o AVA e obtenha suas cadeiras automaticamente!</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="ainda_n_o_tem_conta">Ainda não tem conta?</string>
    <string name="cadastre_se">CADASTRE-SE!</string>
    <string name="login_do_ava">Login do AVA</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="cadastro">CADASTRO</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="preencher_todos_os_campos">Preencha os campos abaixo para efetuar seu registro no sistema.</string>
    <string name="cep">CEP</string>
    <string name="genero">GÊNERO</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="nao_informar">NÃO INFORMAR</string>
    <string name="confirmacao_senha">Confirmação de senha</string>
    <string name="quero_ajudar">QUERO AJUDAR</string>
    <string name="busque_selecione_cadeiras">Busque e selecione as cadeiras que você pode ajudar!</string>
    <string name="busque_uma_cadeira">BUSQUE UMA CADEIRA</string>
    <string name="buscar_reticencias">Buscar...</string>
    <string name="add">ADD</string>
    <string name="cadeiras_selecionadas">CADEIRAS SELECIONADAS</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="demo">Demo</string>
    <string name="pular">PULAR</string>
</resources>
