<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_faltas"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_faltas" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_tab"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_tab"
        android:title="@string/title_profile" />
</menu>
