<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_feed"
        android:enabled="true"
        android:icon="@drawable/ic_feed_tab"
        android:title="@string/feed"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tab_faltas"
        android:enabled="true"
        android:icon="@drawable/ic_faltas_tab"
        android:title="@string/faltas"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tab_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_tab"
        android:title="@string/buscar" />

    <item
        android:id="@+id/tab_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_tab"
        android:title="@string/notificacoes"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tab_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_tab"
        android:title="@string/perfil"
        app:showAsAction="ifRoom"/>

</menu>