<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.armetech.ajudae.user.gui.LoginAvaActivity"
    android:background="#fff">

    <ImageView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/headerloginava" />

    <Button
        android:id="@+id/btnContinuar"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textViewAVA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button_red"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="loginAVA"
        android:text="@string/continuar"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="19dp"
        app:srcCompat="@drawable/loginava" />

    <EditText
        android:text="ericka.psilva"
        android:id="@+id/edtTextAvaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView5"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="34dp"
        android:layout_toEndOf="@+id/icEmail"
        android:layout_toRightOf="@+id/icEmail"
        android:backgroundTint="@color/lightGray"
        android:ems="10"
        android:hint="@string/login_do_ava"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/lightGray" />

    <EditText
        android:text="Anatomy2795*"
        android:id="@+id/edtTextAvaPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edtTextAvaLogin"
        android:layout_alignLeft="@+id/edtTextAvaLogin"
        android:layout_alignRight="@+id/edtTextAvaLogin"
        android:layout_alignStart="@+id/edtTextAvaLogin"
        android:layout_below="@+id/edtTextAvaLogin"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/lightGray"
        android:ems="10"
        android:hint="@string/senha_do_ava"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/lightGray" />

    <ImageView
        android:id="@+id/icEmail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/edtTextAvaPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/icPassword"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/edtTextAvaPass"
        android:layout_alignLeft="@+id/icEmail"
        android:layout_alignStart="@+id/icEmail"
        android:layout_marginBottom="7dp"
        app:srcCompat="@drawable/ic_password" />


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTextAvaPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp" />

    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/textViewAVA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnContinuar"
        android:layout_alignLeft="@+id/btnContinuar"
        android:layout_alignRight="@+id/btnContinuar"
        android:layout_alignStart="@+id/btnContinuar"
        android:layout_below="@+id/textViewName"
        android:text="@string/conecte_se_com_o_ava_e_obtenha_suas_cadeiras_automaticamente"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="16sp" />



</RelativeLayout>