<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    tools:context="com.app.armetech.ajudae.user.gui.RegisterActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:scaleType="matrix"
        app:srcCompat="@drawable/round_header"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cadastro"
        android:textColor="#fff"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/btnContinuar"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button_red"
        android:onClick="registerClick"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edtNameText"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow_edit_text"
        android:drawableRight="@drawable/ic_android_smile"
        android:ems="10"
        android:hint="@string/nome_completo"
        android:inputType="textPersonName"
        android:paddingBottom="14dp"
        android:paddingLeft="25dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/lightGray"
        android:textColorLink="@color/colorPrimary"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <EditText
        android:paddingRight="16dp"
        android:drawableRight="@drawable/ic_android_calendar"
        android:id="@+id/edtBirthDateText"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/edtNameText"
        android:layout_alignStart="@+id/edtNameText"
        android:layout_below="@+id/edtNameText"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shadow_edit_text"
        android:ems="10"
        android:hint="@string/data_nascimento"
        android:inputType="number"
        android:paddingBottom="14dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/lightGray"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="222dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@id/edtNameText"
        android:layout_alignLeft="@id/edtNameText"
        android:layout_alignRight="@id/edtNameText"
        android:layout_alignStart="@id/edtNameText"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/preencher_todos_os_campos"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />



    <EditText
        android:paddingRight="16dp"
        android:drawableRight="@drawable/ic_android_location"
        android:id="@+id/edtCepText"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/edtBirthDateText"
        android:layout_alignLeft="@+id/edtBirthDateText"
        android:layout_alignRight="@+id/edtBirthDateText"
        android:layout_alignStart="@+id/edtBirthDateText"
        android:layout_below="@+id/edtBirthDateText"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shadow_edit_text"
        android:ems="10"
        android:hint="@string/cep"
        android:inputType="number"
        android:paddingBottom="14dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/lightGray"
        android:textColorLink="@color/colorPrimary"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtCepText"
        android:layout_alignStart="@+id/edtCepText"
        android:layout_below="@+id/edtCepText"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/genero"
        android:textColor="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Gender"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="40dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/Gender"
        android:layout_width="261dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537">

        <RadioButton
            android:buttonTint="@color/colorAccent"
            android:id="@+id/rdBtnFemale"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2"
            android:backgroundTint="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/f"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />

        <RadioButton
            android:buttonTint="@color/colorAccent"
            android:id="@+id/rdBtnMale"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/rdBtnFemale"
            android:layout_toRightOf="@+id/rdBtnFemale"
            android:text="@string/m"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/rdBtnNaoDefinir"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignBaseline="@+id/rdBtnMale"
            android:layout_alignBottom="@+id/rdBtnMale"
            android:layout_alignEnd="@+id/edtCepText"
            android:layout_alignRight="@+id/edtCepText"
            android:checked="true"
            android:text="@string/nao_informar"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />
    </RadioGroup>


    <EditText
        android:paddingRight="16dp"
        android:drawableRight="@drawable/ic_android_mail"
        android:id="@+id/edtEmailText"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/rdBtnNaoDefinir"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignRight="@+id/rdBtnNaoDefinir"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/rdBtnFemale"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shadow_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="14dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/lightGray"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <EditText
        android:paddingRight="16dp"
        android:drawableRight="@drawable/ic_android_password"
        android:id="@+id/edtPasswordText"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/edtEmailText"
        android:layout_alignLeft="@+id/edtEmailText"
        android:layout_alignRight="@+id/edtEmailText"
        android:layout_alignStart="@+id/edtEmailText"
        android:layout_below="@+id/edtEmailText"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shadow_edit_text"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingBottom="14dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:singleLine="false"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/lightGray"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <EditText
        android:drawableRight="@drawable/ic_android_password"
        android:paddingRight="16dp"
        android:id="@+id/edtConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/edtEmailText"
        android:layout_alignLeft="@+id/edtEmailText"
        android:layout_alignRight="@+id/edtEmailText"
        android:layout_alignStart="@+id/edtEmailText"
        android:layout_below="@+id/edtEmailText"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shadow_edit_text"
        android:ems="10"
        android:hint="@string/confirmacao_senha"
        android:inputType="textPassword"
        android:paddingBottom="14dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/lightGray"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

</android.support.constraint.ConstraintLayout>